syntax = "proto3";

package com.pal2hmnk.example.generated.grpc.services;

option java_multiple_files = true;

message ConnectionId {
  string value = 1;
}

message Jwt {
  string value = 1;
}